renderlib/src/presenter.h

/*
  Copyright (c) 2016, Dennis Meuwissen
  All rights reserved.

  Redistribution and use in source and binary forms, with or without
  modification, are permitted provided that the following conditions are met:

  1. Redistributions of source code must retain the above copyright notice, this
     list of conditions and the following disclaimer.
  2. Redistributions in binary form must reproduce the above copyright notice,
     this list of conditions and the following disclaimer in the documentation
     and/or other materials provided with the distribution.

  THIS SOFTWARE IS PROVIDED BY THE COPYRIGHT HOLDERS AND CONTRIBUTORS "AS IS" AND
  ANY EXPRESS OR IMPLIED WARRANTIES, INCLUDING, BUT NOT LIMITED TO, THE IMPLIED
  WARRANTIES OF MERCHANTABILITY AND FITNESS FOR A PARTICULAR PURPOSE ARE
  DISCLAIMED. IN NO EVENT SHALL THE COPYRIGHT OWNER OR CONTRIBUTORS BE LIABLE FOR
  ANY DIRECT, INDIRECT, INCIDENTAL, SPECIAL, EXEMPLARY, OR CONSEQUENTIAL DAMAGES
  (INCLUDING, BUT NOT LIMITED TO, PROCUREMENT OF SUBSTITUTE GOODS OR SERVICES;
  LOSS OF USE, DATA, OR PROFITS; OR BUSINESS INTERRUPTION) HOWEVER CAUSED AND
  ON ANY THEORY OF LIABILITY, WHETHER IN CONTRACT, STRICT LIABILITY, OR TORT
  (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE OF THIS
  SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
*/

#ifndef H_PRESENTER
#define H_PRESENTER

#include <windows.h>

typedef struct {
  HWND hwnd;

  HBITMAP hbitmap;
  RGBA* data;

  HDC hbitmapdc;
  HDC htargetdc;

  Surface* surface;

  unsigned int scale;
  unsigned int width;
  unsigned int height;
} Presenter;

EXPORT Presenter*   presenterCreate     (const HWND hwnd, const unsigned int scale);
EXPORT void         presenterDestroy    (Presenter* presenter);
EXPORT void         presenterSetScale   (Presenter* presenter, const unsigned int scale);
EXPORT unsigned int presenterGetScale   (Presenter* presenter);
EXPORT void         presenterResize     (Presenter* presenter);
EXPORT Surface*     presenterGetSurface (Presenter* presenter);
EXPORT void         presenterPresent    (Presenter* presenter);

#endif